# shell-engine

./: .concatignore  .concatignore-rs  .gitattributes  .gitignore  .gitmodules  .menu.conf  .se.toml  .yamllint  3drefactor.md  AGENTS.md  ARCH.MD  ARCHITECTURAL_BLOCKERS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  AUTHORING.md  BENCHMARK-README.md  BENCHMARKING.md  BUILD_PROFILES.md  CHANGELOG.md  CHUNK_43_50_FINAL.md  CHUNK_43_50_SUMMARY.txt  CODEMAP.FULL.MD  CODEMAP.json  CONTINUATION_GUIDE_2.md  CRATE_REBALANCING_STATUS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  FRAME_CAPTURE.md  GPU_ACCELERATION_ANALYSIS.md  HANDOFF.md  HARDWARE-MIGRATION-ROADMAP.md  MODS.md  NEXT_STEPS.md  OPTIMIZATIONS.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_STRATEGY.md  OPTIMIZATION_SUMMARY.txt  (+78 more)
app/: Cargo.toml  README.AGENTS.MD  README.md  build.rs
app/src/: main.rs
editor/: Cargo.toml  README.AGENTS.MD  README.md  theme.toml
editor/assets/: effects-preview-scene.scene.yml  effects-preview.scene.yml
editor/src/: app.rs  cli.rs  main.rs
editor/src/domain/: asset_index.rs  diagnostics.rs  effect_params.rs  effects_catalog.rs  effects_preview_scene.rs  mod.rs  mod_manifest.rs  preview_renderer.rs  scene_index.rs
editor/src/input/: commands.rs  keys.rs  mod.rs
editor/src/io/: fs_scan.rs  indexer.rs  mod.rs  recent.rs  yaml.rs
editor/src/state/: cutscene.rs  editor_pane.rs  effects_browser.rs  filters.rs  focus.rs  mod.rs  project_explorer.rs  scene_run.rs  scenes_browser.rs  selection.rs  start_screen.rs  types.rs  watch.rs
editor/src/ui/: icons.rs  layout.rs  mod.rs  theme.rs
engine/: Cargo.toml  README.AGENTS.MD  README.md
engine-api/: Cargo.toml  README.md
engine-api/src/: commands.rs  lib.rs
engine-api/src/audio/: cues.rs  mod.rs
engine-api/src/collision/: api.rs  mod.rs
engine-api/src/effects/: api.rs  mod.rs
engine-api/src/gameplay/: api.rs  body.rs  collision.rs  emitters.rs  entity.rs  geometry.rs  lifecycle.rs  mod.rs  objects.rs  physics.rs  timers.rs  world.rs
engine-api/src/input/: mod.rs  normalization.rs
engine-api/src/namespaces/: mod.rs  world.rs
engine-api/src/rhai/: conversion.rs  mod.rs  naming.rs  register.rs
engine-api/src/runtime/: api.rs  (+1 more)
engine-asset/: Cargo.toml  README.md
engine-asset/src/: build_keys.rs  image_assets.rs  lib.rs  material_repository.rs  mesh_assets.rs  mesh_repository.rs  profile_assets.rs  repositories.rs  scene_compiler.rs  source_loader.rs
engine-behavior/: Cargo.toml  README.AGENTS.md  README.md
engine-behavior/src/: catalog.rs  emit.rs  emitter_state.rs  factory.rs  geometry.rs  lib.rs  palette.rs  rhai_util.rs
engine-celestial/: Cargo.toml
engine-celestial/src/: derive.rs  lib.rs  services.rs
engine-compositor/: Cargo.toml  README.AGENTS.md  README.md
engine-compositor/src/: access.rs  buffer_pool.rs  compositor.rs  effect_applicator.rs  generated_world_render_adapter.rs  image_render.rs  layer_compositor.rs  lib.rs  obj_loader.rs  obj_prerender.rs  obj_render.rs  obj_render_adapter.rs  obj_render_helpers.rs  obj_source_resolver.rs  planet_render_adapter.rs  prepared_frame.rs  prerender.rs  provider.rs  scene3d_prerender.rs  scene3d_runtime_store.rs  scene_clip_render_adapter.rs  scene_compositor.rs  sprite_renderer.rs  sprite_renderer_2d.rs  sprite_renderer_3d.rs  text_render.rs  warmup.rs
engine-core/: Cargo.toml  README.AGENTS.MD  README.md
engine-core/src/: access.rs  access_tests.rs  asset_cache.rs  asset_source.rs  buffer.rs  color.rs  game_object.rs  game_state.rs  level_state.rs  lib.rs  logging.rs  markup.rs  scene_runtime_types.rs  world.rs
engine-mod/: Cargo.toml  README.md
engine-mod/src/: display_config.rs  lib.rs  output_backend.rs  terminal_caps.rs
engine-render/: Cargo.toml  README.md
engine-render-2d/: Cargo.toml  README.md
engine-render-2d/src/: api.rs  containers.rs  image.rs  layout.rs  lib.rs  panel.rs  text.rs  vector.rs
engine-render-3d/: Cargo.toml  README.md
engine-render-3d/src/: api.rs  frame_input.rs  frame_profiles.rs  lib.rs  obj_render_params.rs  raster.rs  shading.rs
engine-render-sdl2/: Cargo.toml  README.md
engine-render-sdl2/src/: bitmap_font.rs  color_convert.rs  input.rs  lib.rs  renderer.rs  runtime.rs
engine-render-terminal/: Cargo.toml  README.md
engine-render-terminal/src/: color_convert.rs  input.rs  lib.rs  provider.rs  renderer.rs
engine-render-wgpu/: Cargo.toml
engine-render-wgpu/src/: lib.rs
engine-render/src/: font_loader.rs  generic.rs  image_loader.rs  lib.rs  overlay.rs  rasterizer.rs  simd_text.rs  types.rs  vector_overlay.rs
engine-scene-runtime/: Cargo.toml  README.AGENTS.md  README.md
engine-scene-runtime/src/: access.rs  behavior_runner.rs  camera_3d.rs  construction.rs  dirty_tracking.rs  lib.rs  lifecycle_controls.rs  materialization.rs  mutations.rs  object_graph.rs  render3d_state.rs  request_adapter.rs  terminal_shell.rs  ui_focus.rs
engine/src/: asset_cache.rs  asset_source.rs  assets.rs  audio.rs  audio_sequencer.rs  backend_bootstrap.rs  behavior.rs  bench.rs  buffer.rs  cognitos_silhouette.path  components.rs  debug_features.rs  debug_log.rs  error.rs  events.rs  frame_capture.rs  frame_compare.rs  frame_ticket.rs  game_loop.rs  game_object.rs  game_state.rs  image_loader.rs  level_state.rs  lib.rs  markup.rs  mod_behaviors.rs  mod_loader.rs  mod_manifest.rs  obj_frame_cache.rs  obj_prerender.rs  pipeline_flags.rs  prepared_frame.rs  render_policy.rs  renderer.rs  repositories.rs  runtime_effects.rs  runtime_settings.rs  scene.rs  scene3d_atlas.rs  scene3d_format.rs  (+10 more)
engine/tests/: frame_regression.rs  scene_bootstrap_integration.rs  visual_sync_integration.rs
launcher/: Cargo.toml
launcher/src/: cargo.rs  cli.rs  config.rs  env.rs  main.rs  workspace.rs
rust-os/: Cargo.toml  README.md
rust-os/src/: app_host.rs  app_stack.rs  boot.rs  difficulty.rs  hardware.rs  lib.rs  main.rs  protocol.rs  screen_buffer.rs  session.rs  state.rs  style.rs
tools/devtool/: Cargo.toml  stop_animation_converter.py
tools/schema-gen/: Cargo.toml
(+3131 files in other folders)
