[workspace]
members = ["app", "engine", "engine-api", "engine-core", "engine-authoring", "editor", "launcher", "tools/schema-gen", "tools/devtool", "tools/sound-server", "tools/ttf-rasterizer", "engine-io", "rust-os", "engine-audio", "engine-audio-sequencer", "engine-render", "engine-animation", "engine-render-terminal", "engine-render-sdl2", "engine-3d", "engine-terminal", "engine-game", "engine-events", "engine-render-policy", "engine-runtime", "engine-behavior", "engine-scene-runtime", "engine-behavior-registry", "engine-compositor", "engine-pipeline", "engine-debug", "engine-capture", "engine-frame", "engine-error", "engine-mod", "engine-asset", "engine-persistence", "engine-vector", "engine-physics"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paweł Potępa <pawel.potepa@hotmail.com>"]
license = "MIT"

[workspace.dependencies]
# Sibling crates (path dependencies)
engine-core = { path = "./engine-core" }
engine-authoring = { path = "./engine-authoring" }
engine-io = { path = "./engine-io" }
engine-persistence = { path = "./engine-persistence" }
engine-vector = { path = "./engine-vector" }
engine-physics = { path = "./engine-physics" }
engine = { path = "./engine" }
engine-api = { path = "./engine-api" }

# Common external dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
base64 = "0.22"
tempfile = "3.13"

# Terminal/UI
crossterm = "0.29"
tui-input = { version = "0.11", default-features = false }

# Graphics/Rendering
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
taffy = "0.7"

# Compression/Packaging
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Scripting
rhai = { version = "1.19", default-features = false, features = ["std"] }

# Audio
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }

# Parallelism
rayon = "1.10"

# System/Platform
libc = "0.2"
roxmltree = "0.20"
geo = "0.28"

# Release profile optimizations for performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast release profile for development/iteration (20-30s build time)
# Use with: cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
lto = "thin"           # Thin LTO: 50% of full LTO speed, 90% of performance
codegen-units = 4      # Parallel codegen (4x faster linking)
strip = true

# Ultra-fast profile for rapid iteration (5-10s build time)
# Use with: cargo build --profile dev-opt or cargo run --profile dev-opt
[profile.dev-opt]
inherits = "dev"
opt-level = 2          # Basic optimizations
codegen-units = 256    # Maximum parallelism
