[workspace]
members = ["app", "engine", "engine-api", "engine-core", "engine-effects", "engine-authoring", "editor", "launcher", "tools/schema-gen", "tools/devtool", "tools/sound-server", "tools/ttf-rasterizer", "engine-io", "rust-os", "engine-audio", "engine-audio-sequencer", "engine-render", "engine-render-2d", "engine-animation", "engine-render-sdl2", "engine-3d", "engine-game", "engine-events", "engine-render-policy", "engine-runtime", "engine-behavior", "engine-celestial", "engine-scene-runtime", "engine-behavior-registry", "engine-compositor", "engine-pipeline", "engine-debug", "engine-capture", "engine-frame", "engine-error", "engine-mod", "engine-asset", "engine-persistence", "engine-vector", "engine-physics", "engine-layout", "engine-terrain", "engine-mesh", "engine-worldgen", "engine-render-3d", "engine-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paweł Potępa <pawel.potepa@hotmail.com>"]
license = "MIT"

[workspace.dependencies]
# Sibling crates (path dependencies)
engine-core = { path = "./engine-core" }
engine-effects = { path = "./engine-effects" }
engine-authoring = { path = "./engine-authoring" }
engine-celestial = { path = "./engine-celestial" }
engine-io = { path = "./engine-io" }
engine-layout = { path = "./engine-layout" }
engine-persistence = { path = "./engine-persistence" }
engine-vector = { path = "./engine-vector" }
engine-physics = { path = "./engine-physics" }
engine = { path = "./engine" }
engine-api = { path = "./engine-api" }
engine-animation = { path = "./engine-animation" }
engine-render-policy = { path = "./engine-render-policy" }

engine-terrain = { path = "./engine-terrain" }
engine-mesh = { path = "./engine-mesh" }
engine-worldgen = { path = "./engine-worldgen" }
engine-render-2d = { path = "./engine-render-2d" }
engine-render-3d = { path = "./engine-render-3d" }
engine-gui = { path = "./engine-gui" }

# Common external dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
base64 = "0.22"
tempfile = "3.13"

# Graphics/Rendering
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
taffy = "0.7"

# Compression/Packaging
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Scripting
rhai = { version = "1.19", default-features = false, features = ["std"] }

# Audio
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }

# Parallelism
rayon = "1.10"

# System/Platform
libc = "0.2"
roxmltree = "0.20"
geo = "0.28"

# ---------------------------------------------------------------------------
# Release profile — fully optimised, portable (generic x86-64 / SSE2 baseline)
# ---------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = true              # Full fat-LTO: best inlining/DCE across crate boundaries
codegen-units = 1       # Single codegen unit required for full LTO
panic = "abort"         # Drop unwinding machinery (~5-15% smaller binary, no runtime cost)
overflow-checks = false # Remove integer overflow checks from hot rasteriser loops
strip = true            # Strip debug symbols (use "fast-release" profile when profiling)

# Per-crate optimisation overrides — applied on top of [profile.release] above.
# The launcher binary is a thin CLI wrapper; optimise for size not speed.
[profile.release.package.launcher]
opt-level = "s"

# ---------------------------------------------------------------------------
# Native release — same as release but enables target-cpu=native for local use.
# Enables AVX2/AVX512 auto-vectorisation — biggest win for the software rasteriser.
# NOT portable: binaries only run on this CPU family. Use for local dev/benchmarks.
#
# profile-level rustflags requires Cargo ≥1.95 (not yet stable on this toolchain).
# Until then, set the flag on the command line or in an env var:
#
#   RUSTFLAGS="-C target-cpu=native" cargo build --release
#
# Or add a machine-local override in .cargo/config.toml (already gitignored if local):
#   [target.x86_64-pc-windows-msvc]
#   rustflags = ["-C", "linker-flavor=lld-link", "-C", "target-cpu=native"]
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Fast release profile — quick iteration builds (20-30 s build time)
# Use with: cargo build --profile fast-release
# ---------------------------------------------------------------------------
[profile.fast-release]
inherits = "release"
lto = "thin"            # Thin LTO: ~90% of perf, 50% of full LTO link time
codegen-units = 4       # Parallel codegen (4× faster linking than CU=1)
strip = true

# ---------------------------------------------------------------------------
# Dev-opt profile — rapid iteration with basic optimisations (5-10 s build)
# Use with: cargo run --profile dev-opt
# ---------------------------------------------------------------------------
[profile.dev-opt]
inherits = "dev"
opt-level = 2           # Enough for readable framerate in the rasteriser
codegen-units = 256     # Maximum incremental parallelism

# Hot rendering crates: always compile at full speed even in dev profile.
# Keeps the framerate usable without a full release build.
[profile.dev.package.engine-compositor]
opt-level = 3
[profile.dev.package.engine-render-3d]
opt-level = 3
[profile.dev.package.engine-mesh]
opt-level = 3
[profile.dev.package.engine-terrain]
opt-level = 3
