[package]
name = "engine-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-core.workspace = true
engine-game = { path = "../engine-game" }
engine-physics = { path = "../engine-physics" }
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
