[package]
name = "engine-asset"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core", version = "0.1.0" }
engine-authoring = { path = "../engine-authoring", version = "0.1.0" }
engine-error = { path = "../engine-error", version = "0.1.0" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
