[package]
name = "engine-behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-api = { path = "../engine-api" }
engine-celestial = { workspace = true }
engine-terrain = { path = "../engine-terrain" }
engine-core = { path = "../engine-core" }
engine-animation = { path = "../engine-animation" }
engine-events = { path = "../engine-events" }
engine-game = { path = "../engine-game" }
engine-gui = { workspace = true }
engine-vehicle = { path = "../engine-vehicle" }
engine-persistence = { path = "../engine-persistence" }
engine-physics = { path = "../engine-physics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rhai = { version = "1.18", features = ["metadata"] }
serde_yaml = "0.9"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "engine_behavior"
path = "src/lib.rs"
