[package]
name = "engine-compositor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-celestial = { workspace = true }
engine-core = { workspace = true }
engine-effects = { workspace = true }
engine-mesh = { workspace = true }
engine-animation = { path = "../engine-animation" }
engine-asset = { path = "../engine-asset" }
engine-layout = { path = "../engine-layout" }
engine-pipeline = { path = "../engine-pipeline" }
engine-render = { path = "../engine-render" }
engine-vector = { workspace = true }
engine-render-policy = { path = "../engine-render-policy" }
engine-scene-runtime = { path = "../engine-scene-runtime" }
engine-runtime = { path = "../engine-runtime" }
engine-error = { path = "../engine-error" }
engine-3d = { path = "../engine-3d" }
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
serde_json = "1"
rayon = "1.10"
base64 = "0.22"

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
