[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
authors = ["Paweł Potępa <pawel.potepa@hotmail.com>"]
license = "MIT"

[dependencies]
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3.13"
