[package]
name = "engine-render-2d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-animation = { workspace = true }
engine-asset = { path = "../engine-asset" }
engine-core = { workspace = true }
engine-effects = { workspace = true }
engine-layout = { workspace = true }
engine-render = { path = "../engine-render" }
engine-render-policy = { workspace = true }
engine-vector = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
