[package]
name = "engine-render-sdl2"
version = "0.1.0"
edition = "2021"
description = "DEPRECATED/INACTIVE: legacy SDL2 backend retained on disk for reference"
publish = false

[package.metadata]
status = "deprecated-inactive"
note = "Not part of the active workspace and not wired into engine runtime features."

[dependencies]
engine-core = { path = "../engine-core" }
engine-events = { path = "../engine-events" }
engine-render = { path = "../engine-render" }
engine-runtime = { path = "../engine-runtime" }
sdl2 = { version = "0.38" }
