[package]
name = "engine-render-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-animation = { path = "../engine-animation" }
engine-render = { path = "../engine-render" }
crossterm = "0.29"
