[package]
name = "engine-render-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-animation = { path = "../engine-animation" }
engine-render = { path = "../engine-render" }
engine-runtime = { path = "../engine-runtime" }
engine-debug = { path = "../engine-debug" }
engine-pipeline = { path = "../engine-pipeline" }
crossterm = "0.29"
