[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine-core = { workspace = true }
thiserror = { workspace = true }
engine-asset = { path = "../engine-asset" }
rusttype = { version = "0.9", features = ["gpu_cache"] }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zip = { workspace = true }
