[package]
name = "engine-scene-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
engine-animation = { path = "../engine-animation" }
engine-behavior = { path = "../engine-behavior" }
engine-behavior-registry = { path = "../engine-behavior-registry" }
engine-events = { path = "../engine-events" }
engine-game = { path = "../engine-game" }
engine-gui = { workspace = true }
engine-persistence = { path = "../engine-persistence" }
engine-render = { path = "../engine-render" }
engine-runtime = { path = "../engine-runtime" }
tui-input = { version = "0.11", default-features = false }
serde_json = "1"
serde_yaml = "0.9"
rhai = { version = "1.19", default-features = false, features = ["std"] }

[lib]
name = "engine_scene_runtime"
path = "src/lib.rs"
