[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-authoring = { workspace = true }
engine-animation = { path = "../engine-animation" }
engine-audio = { path = "../engine-audio" }
engine-3d = { path = "../engine-3d" }
engine-events = { path = "../engine-events" }
engine-game = { path = "../engine-game" }
engine-render = { path = "../engine-render" }
engine-render-policy = { path = "../engine-render-policy" }
engine-render-terminal = { path = "../engine-render-terminal" }
engine-runtime = { path = "../engine-runtime" }
engine-terminal = { path = "../engine-terminal" }
engine-pipeline = { path = "../engine-pipeline" }
engine-core = { workspace = true }
engine-io = { workspace = true }
crossterm = "0.29"
tui-input = { version = "0.11", default-features = false }
taffy = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rhai = { version = "1.19", default-features = false, features = ["std"] }
rayon = "1.10"
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }
libc = "0.2"
base64 = "0.22"
roxmltree = "0.20"

[dev-dependencies]
tempfile = "3.13"
